welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:18: error: ';' expected but identifier found.
} fleur(Color.RED)
  ^